# rl-agent-training

./: .gitignore  README.md  main.py  pyproject.toml
api/: main.py  routes.py
dashboard/: app.py
gui/: app.py
notebook/: exercice_1.ipynb  exercice_2.ipynb  exercice_3.ipynb  mission.ipynb
tests/: test_api.py
