[project]
name = "training-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d]>=1.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=1.26.4",
    "stable-baselines3>=2.4.1",
    "swig>=4.4.1",
    "tensorboard>=2.20.0",
    "torch==2.2.2",
]
